app/static/styles.css
/* color pallet */
:root {
  --dark_brown:#6b4f35;
  --light_brown: #725a43;
  --brown:#7a593a;
  --dark_blue:#6caec4; 
  --blue:#81d3ef;
  --yellow:#ffe000;
}
/* end color pallet */


/* miscellaneous */

.opaqe{
  opacity: 100% !important;
}

.prettyHr{
  width: 5px;
  height: 20px; 
  display: inline-block;
}

.invisHr{
  color: transparent;
}

.paddingStripper{
  padding: 0% !important;
}

.linkStripper{
  text-decoration: none !important;
  color: black;
}

.width100{
  width: 100%;
}

.marginMiddle{ 
  margin-left: auto !important;
  margin-right: auto !important;
}

.baseCampBackground{
  background-image: url(images/baseCamp_building_snipped.jpg);
  overflow: hidden;
}

.boarderBig{
  border: solid;
  border-width: 10px !important;
}

.boarderMed{
  border: solid;
  border-width: 7px !important;
}

.boarderSmall{
  border: solid;
  border-width: 5px !important;
}

.background{
  background-image: url(images/lighter_brown_background.jpg);
}

.border-brown {
  border-color: var(--brown) !important;
}

.border-blue{
  border-color: var(--blue) !important;
}

.error{
  color:red !important;
  font-size: .9em;
}

.errorShadow{
  text-shadow: 1px 1px 1px red, 0 0 1em red, 0 0 0.1em red !important;
}

.chonk-font{
  font-size: x-large;
}

.blue-hr{
  border-color: var(--blue);
}

.med-font{
  font-size: medium !important;
}

.text-blue{
  color:var(--blue) !important;
}

.text-brown{
  color:var(--brown) !important;
}

.blue-shadow{
  text-shadow: .06em .02em var(--dark_blue) !important;
}

.brown-shadow{
  text-shadow: .06em .02em var(--dark_brown) !important;
}

.blue-box-shadow{
  box-shadow: 5px 5px 2px 1px var(--dark_blue);
}

.background-brown{
  background-color: var(--brown) !important;
}

.bluebar{
  background-color: #725a4387;
  color:var(--blue) !important;
  text-align: center;
  border-radius: 20px;
}

.background-blue{
  background-color: var(--blue) !important;
}

.background-dark-blue{
  background-color: var(--dark_blue) !important;
}
/* end miscellaneous */

/* all */

html {
  scroll-behavior: smooth !important;
}

body,html{
  overflow-y: scroll !important;
  overflow-x: hidden !important;
  margin: 0px;
}

body {
  margin: 0;
  padding: 0;
  /* background-image: url('your-image.jpg'); */
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

/* end all */

/* home */
.homeBackground{
  background-image: url("images/bcca_group_photo_enhance.png") !important;
}

.missonstatement{
  width:300px;
  background-color: white;
  position: relative;
  left:1100px;
  top:300px;
  opacity:0.9;
  border-color: var(--dark_brown);
  border-width: 4px;
  text-align:center;
  border-radius: 20px;
}

/* footer stuff */
.footerElements{
  text-decoration: none;
  color: var(--brown);
  margin-left: .5em;
  margin-right: .5em;
}

.footerElements:hover{
  text-decoration: underline;
}
/* end footer */

/* settings */

.photoMaxWidth{
  max-width: 200px !important;
}

.minContent{
  max-width: min-content !important;
}

.minContentHeight{
  max-height: min-content !important;
}
.maxWidthBoxSmall{
  max-width: 150px !important;
}

.maxWidthBoxSmallMed{  
  max-width: 200px !important;
}

.maxWidthBox{
  max-width: 300px !important;
}

.maxWidthBoxBig{
  max-width: 500px !important;
}

.maxHeightBox{
  max-height: 300px !important;
}

.maxHeightBoxBig{
  max-height: 600px !important;
}
/* end settings  */

/* profile */
.rounded-circle-container {
  width: 200px; 
  height: 200px; /* Same as width to get a perfect circle */
  overflow: hidden;
  margin-left: auto;
  margin-right: auto;
}

.rounded-circle-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 50%;
}

.rounded-circle-container2{
  width: 200px; 
  height: 200px; /* Same as width to get a perfect circle */
  overflow: hidden;
  margin-left: auto;
  margin-right: auto;
}

.rounded-circle-container2 img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 50%;
}

.rounded-circle-container2 img:hover{
  border: solid;
  border-color: black;
  border-width: 10px;  
  transition: border-width .1s ease-in-out;}

.left_element{
  max-width: 400px !important;
  margin-left: -8px !important;
}

.right_element{
  max-width: 400px !important;
  margin-right: -8px !important;
}

.overflow {
  max-height: 200px; /* Adjust the max height as needed */
  overflow-y: scroll;
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
}

.overflow::-webkit-scrollbar {
  width: 0.05em; /* For Chrome and Safari */
}

.overflow::-webkit-scrollbar-thumb {
  background-color: transparent; /* For Chrome and Safari */
}

@media only screen and (max-width: 600px) {
.left_element,.right_element{
  margin-left: 0px !important;
  margin-right: 0px !important;
  margin-top: 10px !important;
}
}

/* bugBoard */
.upVoteDiv{
  display: flex;
  flex-direction: row;
}

.upVoteIcon{
  width: 15px;
  height: 15px;
}

.upVoteIcon.bi-arrow-up {
  display: none;
}

.upVoteIcon.bi-arrow-up-circle-fill {
  display: block;
}

.upVoteIcon.active.bi-arrow-up {
  display: block;
}

.upVoteIcon.active.bi-arrow-up-circle-fill {
  display: none;
}

